--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>Blac Studios</title>
+		<title>Blac Studios |</title>
 	</head>
 	<body>
 		<div id="container"></div>
