--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>Blac Studios | VFX & Animation</title>
+		<title>On The Grid | VFX & Animation</title>
 	</head>
 	<body>
 		<div id="container"></div>
