changed contact page to career added career content with styling and changed document title

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>OnTheGrid | VFX & Animation</title>
+		<title>OnTheGrid |</title>
 	</head>
 	<body>
 		<div id="container"></div>
