name change and update

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link
-			href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>OnTheGrid |</title>
-	</head>
-	<body>
-		<div id="container"></div>
-	</body>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+        <title>BlacBallStudios |</title>
+    </head>
+    <body>
+        <div id="container"></div>
+    </body>
 </html>
